--- a/sfml.3/CMakeLists.txt
+++ b/sfml.3/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 project(sfml-lab-3)
 
-set(SFML_STATIC_LIBRARIES TRUE)
+#set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "/usr/local/lib/cmake/SFML")
+
 
 find_package(Freetype REQUIRED)
 find_package(JPEG REQUIRED)
