настроил компиляцию на ubuntu

--- a/sfml.1/03/CMakeLists.txt
+++ b/sfml.1/03/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_executable(03 main.cpp)
-
-set(SFML_STATIC_LIBRARIES TRUE)
+add_executable(convex main.cpp)
+#set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "/usr/local/lib/cmake/SFML")
 
 find_package(Freetype)
 find_package(JPEG)
-find_package(SFML 3 COMPONENTS Window Graphics System)
+find_package(SFML 2 COMPONENTS window graphics system)
 
-target_compile_features(03 PUBLIC cxx_std_17)
-target_compile_definitions(03 PRIVATE SFML_STATIC)
+target_compile_features(convex PUBLIC cxx_std_17)
+target_compile_definitions(convex PRIVATE SFML_STATIC)
 
-target_link_libraries(03 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+target_link_libraries(convex ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
