--- a/sfml.1/01/CMakeLists.txt
+++ b/sfml.1/01/CMakeLists.txt
@@ -1,12 +1,13 @@
-add_executable(01 main.cpp)
+add_executable(shapes main.cpp)
 
-set(SFML_STATIC_LIBRARIES TRUE)
+#set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "/usr/local/lib/cmake/SFML")
 
 find_package(Freetype)
 find_package(JPEG)
-find_package(SFML 3 COMPONENTS Window Graphics System)
+find_package(SFML 2 COMPONENTS window graphics system)
 
-target_compile_features(01 PUBLIC cxx_std_17)
-target_compile_definitions(01 PRIVATE SFML_STATIC)
+target_compile_features(shapes PUBLIC cxx_std_17)
+target_compile_definitions(shapes PRIVATE SFML_STATIC)
 
-target_link_libraries(01 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+target_link_libraries(shapes ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
