--- a/sfml.1/02/CMakeLists.txt
+++ b/sfml.1/02/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_executable(02 main.cpp)
-
-set(SFML_STATIC_LIBRARIES TRUE)
+add_executable(rectangles main.cpp)
+#set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "/usr/local/lib/cmake/SFML")
 
 find_package(Freetype)
 find_package(JPEG)
-find_package(SFML 3 COMPONENTS Window Graphics System)
+find_package(SFML 2 COMPONENTS window graphics system)
 
-target_compile_features(02 PUBLIC cxx_std_17)
-target_compile_definitions(02 PRIVATE SFML_STATIC)
+target_compile_features(rectangles PUBLIC cxx_std_17)
+target_compile_definitions(rectangles PRIVATE SFML_STATIC)
 
-target_link_libraries(02 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+target_link_libraries(rectangles ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
