--- a/sfml.1/sfml.1.1/CMakeLists.txt
+++ b/sfml.1/sfml.1.1/CMakeLists.txt
@@ -1,10 +1,11 @@
 add_executable(trafficlight main.cpp)
 
-set(SFML_STATIC_LIBRARIES TRUE)
+#set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "/usr/local/lib/cmake/SFML")
 
 find_package(Freetype)
 find_package(JPEG)
-find_package(SFML 3 COMPONENTS Window Graphics System)
+find_package(SFML 2 COMPONENTS window graphics system)
 
 target_compile_features(trafficlight PUBLIC cxx_std_17)
 target_compile_definitions(trafficlight PRIVATE SFML_STATIC)
