--- a/sfml.1/sfml.1.2/CMakeLists.txt
+++ b/sfml.1/sfml.1.2/CMakeLists.txt
@@ -1,12 +1,13 @@
-add_executable(04 main.cpp)
+add_executable(figure_name main.cpp)
 
-set(SFML_STATIC_LIBRARIES TRUE)
+#set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "/usr/local/lib/cmake/SFML")
 
 find_package(Freetype)
 find_package(JPEG)
-find_package(SFML 3 COMPONENTS Window Graphics System)
+find_package(SFML 2 COMPONENTS window graphics system)
 
-target_compile_features(04 PUBLIC cxx_std_17)
-target_compile_definitions(04 PRIVATE SFML_STATIC)
+target_compile_features(figure_name PUBLIC cxx_std_17)
+target_compile_definitions(figure_name PRIVATE SFML_STATIC)
 
-target_link_libraries(04 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+target_link_libraries(figure_name ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
