--- a/sfml.2/00/CMakeLists.txt
+++ b/sfml.2/00/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(00 main.cpp)
+add_executable(numbers main.cpp)
 
-target_compile_features(00 PUBLIC cxx_std_17)
+target_compile_features(numbers PUBLIC cxx_std_17)
