--- a/sfml.2/02/CMakeLists.txt
+++ b/sfml.2/02/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(02 main.cpp)
 
-set(SFML_STATIC_LIBRARIES TRUE)
+#set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "/usr/local/lib/cmake/SFML")
 
 find_package(Freetype REQUIRED)
 find_package(JPEG REQUIRED)
@@ -10,4 +11,4 @@ target_include_directories(02 PRIVATE ${SFML_INCLUDE_DIR})
 target_compile_features(02 PUBLIC cxx_std_17)
 target_compile_definitions(02 PRIVATE SFML_STATIC)
 
-target_link_libraries(02 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+target_link_libraries(02 sfml-graphics sfml-window sfml-system)
