--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 project(op-labs)
 
-#add_subdirectory(sfml.1)
+add_subdirectory(sfml.1)
 add_subdirectory(sfml.2)
-#add_subdirectory(sfml.3)
+add_subdirectory(sfml.3)
