--- a/workshop_2/workshop2.1/CMakeLists.txt
+++ b/workshop_2/workshop2.1/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(workshop2.1 main.cpp)
 
 #set(SFML_STATIC_LIBRARIES TRUE)
-set(SFML_DIR "/usr/local/lib/cmake/SFML")
+set(SFML_STATIC_LIBRARIES TRUE)
 
 find_package(Freetype REQUIRED)
 find_package(JPEG REQUIRED)
@@ -11,4 +11,4 @@ target_include_directories(workshop2.1 PRIVATE ${SFML_INCLUDE_DIR})
 target_compile_features(workshop2.1 PUBLIC cxx_std_17)
 target_compile_definitions(workshop2.1 PRIVATE SFML_STATIC)
 
-target_link_libraries(workshop2.1 sfml-graphics sfml-window sfml-system)
+target_link_libraries(workshop2.1 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
